# index.js
@@ -1,12 +1,25 @@
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
-const jokes = require('./data/joke.json');
+const JokeRouter = require("./Routes/joke");
+const mongoose = require("mongoose");
+const UserRouter = require('./Routes/user');
+const bodyParser = require("body-parser")
+var cors = require('cors')
+
 const app = express();
 const PORT = 8000;
-
+app.use(bodyParser.json())
+app.use(cors())
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
+// YdyJFP6LOaknE92b
+// adminjokeapi
+mongoose.connect("mongodb+srv://adminjokeapi:YdyJFP6LOaknE92b@cluster0.ger3qmd.mongodb.net/?retryWrites=true&w=majority", { useNewUrlParser: true })
+    .then(
+        () => console.log("database connected "),
+        (reason) => console.log("something went wrong with  -> ", reason)
+    )
 
 app.get("/", (req, res) => {
     res.send("Welcome to the Joke API");
@@ -21,53 +34,9 @@ app.get("/about", (req, res) => {
     });
 });
 
-app.get("/joke", (req, res) => {
-    // #swagger.tags = ['Jokes']
-    // #swagger.summary = 'Get all jokes or a joke by id or category'\
-    // #swagger.description = 'Some description...'
-    const { id, category } = req.query
-    console.log("id ", id, category);
 
-    if (id === undefined && category === undefined) {
-        res.status(200).json({
-            error: "false",
-            length: jokes.length,
-            data: jokes
-        });
-        return;
-    }
-
-    const joke = jokes.find(joke => joke.id === parseInt(id));
-
-    if (joke) {
-        res.status(200).json({
-            error: "false",
-            length: 1,
-            data: joke
-        });
-        return;
-    }
-
-    if (category) {
-        const joke = jokes.filter(joke => joke.category === category);
-        res.status(200).json({
-            error: "false",
-            category: category,
-            length: joke.length,
-            data: joke
-        });
-        return;
-    }
-
-
-    res.status(200).json({
-        error: "false",
-        length: 0,
-        data: "no jokes found with that id"
-    });
-
-});
-
+app.use("/api/joke", JokeRouter);
+app.use("/api/user", UserRouter);
 
 app.listen(PORT, () => {
     console.log(`Server is running on port ${PORT}`);
