# models/user.js
@@ -1,0 +1,20 @@
+const mongoose = require("mongoose")
+
+
+const UserSchema = new mongoose.Schema({
+    username: {
+        type: String,
+        required: true,
+        unique: true
+    },
+    password: {
+        type: String,
+        required: true
+    }
+})
+
+
+const User = mongoose.model('User', UserSchema)
+
+
+module.exports = User
